Fix bug with adding on click via id not class

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         <textarea class="col-7 description"></textarea>
         <button id="saveBtn" class="col-2 saveBtn">Save Task</button>
       </div>
+      <div id="9" class="time-block row">
+        <div class="col-3 hour">9a.m. to 10a.m.</div>
+        <textarea class="col-7 description"></textarea>
+        <button id="saveBtn" class="col-2 saveBtn">Save Task</button>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
