Added and tested extra time-block for 10 to 11

--- a/index.html
+++ b/index.html
@@ -30,13 +30,21 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <!-- 8am - 9am time-block -->
       <div id="8" class="time-block row">
         <div class="col-3 hour">8a.m. to 9a.m.</div>
         <textarea class="col-7 description"></textarea>
         <button id="saveBtn" class="col-2 saveBtn">Save Task</button>
       </div>
+      <!-- 9am - 10am time-block -->
       <div id="9" class="time-block row">
         <div class="col-3 hour">9a.m. to 10a.m.</div>
+        <textarea class="col-7 description"></textarea>
+        <button id="saveBtn" class="col-2 saveBtn">Save Task</button>
+      </div>
+      <!-- 10am - 11am time-block -->
+      <div id="10" class="time-block row">
+        <div class="col-3 hour">10a.m. to 11a.m.</div>
         <textarea class="col-7 description"></textarea>
         <button id="saveBtn" class="col-2 saveBtn">Save Task</button>
       </div>
