--- a/index.html
+++ b/index.html
@@ -48,8 +48,53 @@
         <textarea class="col-7 description"></textarea>
         <button id="saveBtn" class="col-2 saveBtn">Save Task</button>
       </div>
-    </div>
+      <!-- 11am - 12pm time-block -->
+      <div id="11" class="time-block row">
+        <div class="col-3 hour">11a.m. to 12p.m.</div>
+        <textarea class="col-7 description"></textarea>
+        <button id="saveBtn" class="col-2 saveBtn">Save Task</button>
+      </div>
+      <!-- 12pm - 1pm time-block -->
+      <div id="12" class="time-block row">
+        <div class="col-3 hour">12p.m. to 1p.m.</div>
+        <textarea class="col-7 description"></textarea>
+        <button id="saveBtn" class="col-2 saveBtn">Save Task</button>
+      </div>
+      <!-- 1pm - 2pm time-block -->
+      <div id="13" class="time-block row">
+        <div class="col-3 hour">1p.m. to 2p.m.</div>
+        <textarea class="col-7 description"></textarea>
+        <button id="saveBtn" class="col-2 saveBtn">Save Task</button>
+      </div>
+      <!-- 2pm - 3pm time-block -->
+      <div id="14" class="time-block row">
+        <div class="col-3 hour">2p.m. to 3p.m.</div>
+        <textarea class="col-7 description"></textarea>
+        <button id="saveBtn" class="col-2 saveBtn">Save Task</button>
+      </div>
+      <!-- 3pm - 4pm time-block -->
+      <div id="15" class="time-block row">
+        <div class="col-3 hour">3p.m. to 4p.m.</div>
+        <textarea class="col-7 description"></textarea>
+        <button id="saveBtn" class="col-2 saveBtn">Save Task</button>
+      </div>
+      <!-- 4pm - 5pm time-block -->
+      <div id="16" class="time-block row">
+        <div class="col-3 hour">4p.m. to 5p.m.</div>
+        <textarea class="col-7 description"></textarea>
+        <button id="saveBtn" class="col-2 saveBtn">Save Task</button>
+      </div>
+      <!-- 5pm - 6pm time-block -->
+      <div id="17" class="time-block row">
+        <div class="col-3 hour">5p.m. to 6p.m.</div>
+        <textarea class="col-7 description"></textarea>
+        <button id="saveBtn" class="col-2 saveBtn">Save Task</button>
+      </div>
 
+
+
+<!-- end of time blocks -->
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="script.js"></script>
